--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "sequelize db:migrate",
     "start": "node index.js"
   },
   "author": "tim3",
