--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.1",
