--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.1",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
