--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.1",
