--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed:all",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest --setupFiles dotenv/config --coverage --forceExit",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "author": "tim3",
   "license": "ISC",
