undo migrate transaction history dan ticket

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "migrate": "sequelize db:migrate",
+    "migrate": "sequelize db:migrate:undo --name 20221128175654-create-history.js && sequelize db:migrate:undo --name 20221128174339-create-transaction.js && sequelize db:migrate:undo --name 20221128172948-create-ticket.js && sequelize db:migrate ",
     "seed": "sequelize db:seed:all",
     "start": "node index.js",
     "test": "jest --setupFiles dotenv/config --coverage --forceExit",
