--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,26 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "camelcase": "warn",
-    "no-console": "off"
+    "indent": ["error", 2],
+    "comma-dangle": ["error", {
+        "arrays": "always",
+        "objects": "always",
+        "imports": "never",
+        "exports": "never",
+        "functions": "never"
+    }],
+    "quotes": ["error", "double"],
+    "max-len": ["error", { 
+        "code": 80, 
+        "tabWidth": 2,
+        "ignoreComments": true,
+        "ignoreTrailingComments": true,
+        "ignoreStrings": true
+    }],
+    "jest/expect-expect": "off",
+    "no-console": "error",
+    "no-unused-labels": "error",
+    "no-unused-vars": "error",
+    "semi": ["error", "never"]
   }
 }
