--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       DB_NAME: ${{ secrets.DB_NAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_PORT: ${{ secrets.DB_PORT }}
-      DB_USER: ${{ secrets.DB_USERNAME }}
+      DB_USER: ${{ secrets.DB_USER }}
       PORT: 8080
       ACCESS_TOKEN_SECRET: secret
       REFRESH_TOKEN_SECRET: rahasia
