--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo:all",
     "db:seed": "sequelize db:seed:all",
-    "db:drop": "sequelize db:drop",
-    "db:rollback": "sequelize db:migrate:undo"
+    "db:drop": "sequelize db:drop"
   },
   "author": "tim3",
   "license": "ISC",
