menambahkan unit testing

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node -r dotenv/config bin/www",
+    "dev": "nodemon -r dotenv/config bin/www",
     "migrate": "sequelize db:migrate ",
     "seed": "sequelize db:seed:all",
-    "start": "node index.js",
-    "test": "jest --setupFiles dotenv/config --coverage --forceExit",
+    "test": "jest --setupFiles dotenv/config --coverage --forceExit --detectOpenHandles --maxWorkers=1",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "db:create": "sequelize db:create",
