menambahkan env nodemailer

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_PORT: ${{ secrets.DB_PORT }}
       DB_USER: ${{ secrets.DB_USER }}
+      EMAIL: ${{ secrets.EMAIL }}
+      PASS: ${{ secrets.PASS }}
       SECRET_KEY: secret
     steps:
       - name: Get code
