--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,8 +13,10 @@ jobs:
       #   uses: ./.github/actions/cached-deps
       - name: Install dependencies
         run: npm install
-      - name: Build website
-        run: npm run build
+      # - name: Build website
+      #   run: npm run build
+      - name: run website
+        run: npm run start
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
