--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,11 +28,11 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Get build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: dist-files
-          path: ./dist
+      # - name: Get build artifacts
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: dist-files
+      #     path: ./dist
       - name: Output contents
         run: ls
       - name: Deploy site
