--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node -r dotenv/config bin/www",
     "dev": "nodemon -r dotenv/config bin/www",
-    "migrate": "sequelize sequelize db:migrate  && sequelize db:seed:all",
+    "migrate": "sequelize db:migrate && sequelize db:seed:all",
     "seed": "sequelize db:seed:all",
     "test": "jest --setupFiles dotenv/config --coverage --forceExit --detectOpenHandles --maxWorkers=1",
     "lint": "eslint .",
